gcc/testsuite/gm2/iso/fail/simpleforward7.mod
MODULE simpleforward7 ;

PROCEDURE foo (c: CARDINAL) ; FORWARD ;

PROCEDURE foo (c: INTEGER) ;
BEGIN
END foo ;

BEGIN
   foo (1)
END simpleforward7.
